test/negative/701_exception_in_function.fx
// expect: module level
fun f() {
    exception LocalErr
    0
}
println(f())
